--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav>
     <h1>JOANA ROQUETTE</h1>
     <ul>
-        <li>Home</li>
+        <li>Home Page</li>
         <li>About me</li>
         <li>Medium Posts</li>
         <li>Portfolio</li>
