--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/StudentCard_CSS.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,25 +9,28 @@
 </head>
 <body>
 
+
 <!--START NAV-->    
-<nav>
+<nav class="border">
     <h1>JOANA ROQUETTE</h1>
-    <ul>
-        <li>Home Page</li>
-        <li>About me</li>
-        <li>Medium Posts</li>
-        <li>Portfolio</li>
-        <li>Contact</li>
+    <!--START TOP MENU-->  
+    <ul class="topmenu">
+        <a href="#"> <li>Home</li> </a>
+        <a href="#"> <li>About me</li> </a>
+        <a href="#"> <li>Medium Posts</li> </a>
+        <a href="#"> <li>Portfolio</li> </a>
+        <a href="#"> <li>Contact</li> </a>
     </ul>
+    <!--START TOP MENU-->  
 </nav>
 <!--END NAV-->
 
 
 <!--START HEADER-->    
-    <header>
+    <header class="bg">
         <img src="" alt="This is the background Image of my Header" />
-        <div CLASS="LEFT_BLOCK">
-            <!--Left Block Text--> 
+        <div CLASS="leftblock">
+        <!--Left Block Text--> 
             <h1>
                 Hello, my name is
                 <span>
@@ -35,6 +39,7 @@
             </h1>
             <p>I'm this person that likes this and that and I'm looking for that and that</p>
             <button>My Resumé</button>
+        <!--Left Block Text--> 
         </div>
     </header>
 <!--END HEADER-->
@@ -128,7 +133,7 @@
 
 <!--START SECTION Portfolio-->  
     <section>
-            <h1>Portfolio</h1>
+            <h1>Projects</h1>
             
         <!--IMAGE 1--> 
             <div>
@@ -150,7 +155,7 @@
         
 
 <!--START SECTION FOOTER-->  
-    <footer>
+    <footer class="bg">
         <h1>Let's Talk</h1>
             <ul>
                 <li>Email</li>
